--- a/index.html
+++ b/index.html
@@ -3,86 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FirstDibs - Instant Deal Alerts</title>
+  <title>FirstDibs - Booking Simplified</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
-      background: #f9fafb;
+      padding: 0;
+      background-color: #fafafa;
       color: #111827;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
-      text-align: center;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 2rem;
+      background-color: #ffffff;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     }
-    .headline {
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #3b82f6;
+    }
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #4b5563;
+      font-weight: 500;
+    }
+    .cta-btn {
+      background-color: #3b82f6;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      font-weight: 600;
+      text-decoration: none;
+    }
+    main {
+      text-align: center;
+      padding: 5rem 2rem;
+    }
+    h1 {
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 1rem;
     }
-    .subhead {
-      font-size: 1.25rem;
+    p {
+      font-size: 1.2rem;
+      color: #6b7280;
       margin-bottom: 2rem;
-      color: #4b5563;
     }
-    .cta {
+    .button-group a {
       display: inline-block;
-      background: #3b82f6;
-      color: white;
+      margin: 0 1rem;
       padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
+      border-radius: 6px;
       text-decoration: none;
       font-weight: 600;
-      transition: background 0.3s;
     }
-    .cta:hover {
-      background: #2563eb;
+    .primary {
+      background-color: #3b82f6;
+      color: white;
     }
-    .features {
-      margin-top: 3rem;
-      display: grid;
+    .secondary {
+      border: 2px solid #3b82f6;
+      color: #3b82f6;
+    }
+    .brands {
+      display: flex;
+      justify-content: center;
       gap: 2rem;
-      text-align: left;
-    }
-    .feature {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
-    }
-    .feature-title {
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
-    .feature-desc {
-      color: #6b7280;
+      flex-wrap: wrap;
+      margin-top: 4rem;
+      color: #9ca3af;
+      font-size: 0.875rem;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="headline">Be the First. Always.</h1>
-    <p class="subhead">Stop losing out on deals. FirstDibs scrapes Facebook Marketplace, Craigslist, and more — so you never miss a hot flip again.</p>
-    <a href="#" class="cta">Try It Free Now</a>
+  <header>
+    <div class="logo">dibtra</div>
+    <nav>
+      <a href="#">Product</a>
+      <a href="#">Pricing</a>
+      <a href="#">Resources</a>
+      <a href="#">Book a Demo</a>
+      <a href="#" class="cta-btn">Try for Free</a>
+    </nav>
+  </header>
 
-    <div class="features">
-      <div class="feature">
-        <h3 class="feature-title">Instant Alerts</h3>
-        <p class="feature-desc">We deliver real-time notifications before Facebook even fires its own alerts.</p>
-      </div>
-      <div class="feature">
-        <h3 class="feature-title">Keyword + Price Filtering</h3>
-        <p class="feature-desc">Only get notified for what you actually want — like \"iPhone 13 under $300\" or \"leather couch near 85701\".</p>
-      </div>
-      <div class="feature">
-        <h3 class="feature-title">Built for Flippers</h3>
-        <p class="feature-desc">Designed by resellers, for resellers. Win more deals, flip faster, earn more.</p>
-      </div>
+  <main>
+    <h1>Workplace bookings made easy, fair, and stress-free</h1>
+    <p>Start booking desks, parking spots or meeting rooms in just 5 minutes.</p>
+    <div class="button-group">
+      <a href="#" class="primary">Try for Free</a>
+      <a href="#" class="secondary">Book a Demo</a>
     </div>
-  </div>
+
+    <div class="brands">
+      <div>TOYOTA</div>
+      <div>ataccama</div>
+      <div>SOCIETE GENERALE</div>
+      <div>mintos</div>
+      <div>teva</div>
+    </div>
+  </main>
 </body>
 </html>
