--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   </header>
 
   <main>
-    <h1>Workplace bookings made easy, fair, and stress-free</h1>
-    <p>Start booking desks, parking spots or meeting rooms in just 5 minutes.</p>
+    <h1>Be the FIRST to every deal with real-time INSTANT alerts across marketplace platforms like craigslist and Facebook.</h1>
+    <p>With our scrapers hunting every second you can forget about the auto-refresh and hours of scrolling.</p>
     <div class="button-group">
       <a href="#" class="primary">Try for Free</a>
       <a href="#" class="secondary">Book a Demo</a>
