--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     </div>
 
     <div class="brands">
-      <div>TOYOTA</div>
-      <div>ataccama</div>
-      <div>SOCIETE GENERALE</div>
-      <div>mintos</div>
-      <div>teva</div>
+      <div>Craigslist</div>
+      <div>Facebook</div>
+      <div>Offer-up</div>
+      <div>Nextdoor</div>
+      <div>and more</div>
     </div>
   </main>
 </body>
