--- a/index.html
+++ b/index.html
@@ -40,16 +40,39 @@
       font-weight: 600;
       text-decoration: none;
     }
+    .hero {
+      background: #111827;
+      color: white;
+      text-align: center;
+      padding: 4rem 2rem 2rem;
+    }
+    .hero h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      color: #d1d5db;
+      margin-bottom: 1rem;
+    }
+    .hero hr {
+      border: 0;
+      height: 1px;
+      background: #374151;
+      margin: 1.5rem auto;
+      width: 80%;
+    }
     main {
       text-align: center;
-      padding: 5rem 2rem;
+      padding: 3rem 2rem;
     }
-    h1 {
+    h2 {
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 1rem;
     }
-    p {
+    .main-text {
       font-size: 1.2rem;
       color: #6b7280;
       margin-bottom: 2rem;
@@ -93,9 +116,17 @@
     </nav>
   </header>
 
+  <section class="hero">
+    <h1>FIRST to every deal<br>with INSTANT alerts<br>and ZERO lag.</h1>
+    <hr>
+    <p><strong>So</strong> you can do more FLIPS and INSANE profit.</p>
+    <hr>
+    <p>With dibtra you’ll get truly instant alerts for any item of your choice on marketplace platforms like craigslist, Facebook marketplace, and more!</p>
+  </section>
+
   <main>
-    <h1>Be the FIRST to every deal with real-time INSTANT alerts across marketplace platforms like craigslist and Facebook.</h1>
-    <p>With our scrapers hunting every second you can forget about the auto-refresh and hours of scrolling.</p>
+    <h2>Be the FIRST to every deal with real-time INSTANT alerts across marketplace platforms like craigslist and Facebook.</h2>
+    <p class="main-text">With our scrapers hunting every second you can forget about the auto-refresh and hours of scrolling.</p>
     <div class="button-group">
       <a href="#" class="primary">Try for Free</a>
       <a href="#" class="secondary">Book a Demo</a>
