--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #fafafa;
-      color: #111827;
+      background-color: #ffffff;
+      color: #1d4ed8;
     }
     header {
       display: flex;
@@ -41,39 +41,45 @@
       text-decoration: none;
     }
     .hero {
-      background: #111827;
-      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      padding: 4rem 2rem 2rem;
+      min-height: 100vh;
+      padding: 2rem;
     }
     .hero h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      color: #1d4ed8;
+    }
+    .hero h1 strong {
+      color: #111827;
     }
     .hero p {
       font-size: 1.2rem;
-      color: #d1d5db;
-      margin-bottom: 1rem;
+      color: #1d4ed8;
+      margin: 1rem 0;
     }
     .hero hr {
-      border: 0;
+      border: none;
       height: 1px;
-      background: #374151;
-      margin: 1.5rem auto;
+      background-color: #e5e7eb;
       width: 80%;
+      margin: 2rem auto;
     }
     main {
       text-align: center;
       padding: 3rem 2rem;
     }
     h2 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      color: #1d4ed8;
     }
     .main-text {
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: #6b7280;
       margin-bottom: 2rem;
     }
@@ -117,11 +123,13 @@
   </header>
 
   <section class="hero">
-    <h1>FIRST to every deal<br>with INSTANT alerts<br>and ZERO lag.</h1>
+    <h1><strong>FIRST</strong> to every deal<br>
+    with <strong>INSTANT</strong> alerts<br>
+    and <strong>ZERO</strong> lag.</h1>
     <hr>
-    <p><strong>So</strong> you can do more FLIPS and INSANE profit.</p>
+    <p><strong>So</strong> you can do more <strong>FLIPS</strong> and <strong>INSANE</strong> profit.</p>
     <hr>
-    <p>With dibtra you’ll get truly instant alerts for any item of your choice on marketplace platforms like craigslist, Facebook marketplace, and more!</p>
+    <p class="main-text">With dibtra you’ll get truly instant alerts for any item of your choice on marketplace platforms like craigslist, Facebook marketplace, and more!</p>
   </section>
 
   <main>
